W04 Assignment fix the issue of accessibility on mobile

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -159,18 +159,20 @@ html {
         right: 20px;
         z-index: 20;
         cursor:pointer;
+        width: 40px;
+            height: 40px;
+            text-align: center;
+            line-height: 40px;
     }
     
     #menu::before {
         content: "☰";
+        display: inline-block;
+        color: inherit;
     }
-    
     #menu.open::before {
-        content: "❎";
+        content: "❎" !important;
     }
-    /*header, .navBar {
-        height: 80px;
-    }*/
 
     .navBar {
         display: none;
